# EZFinance

./: CALCULATOR.py  COMPARE.py  README.md  data.csv  long-term.py  main.py  news.py  pyproject.toml  sorted.csv
docs/: index.html
static/: script.js
static/favicons/: browserconfig.xml  site.webmanifest
static/finance_data/: news_data.json
static/styles/: bootstrap.min.css  styles.css
templates/: base.html  index.html  stupidcodesnippets.html  template.html
templates/banking/: appointment.html  consulting.html  index.html  transactions.html  transfer.html
templates/investment/: index.html  long-term.html  short-term.html
templates/investment/api_data/: range.json  shortTermInvestments.json  shortTermSell.json  stored.csv
